# ampl2omt

./: CMakeLists.txt  README.md
include/: smtlib_converter.hpp
include/ampl2omt/: definitions_mapper.hpp  smtlib_converter.hpp  smtlib_term_converter.hpp
src/: CMakeLists.txt  ampl2omt.cpp  smtlib_converter.cpp
src/converter/: CMakeLists.txt  definitions_mapper.cpp  smtlib_converter.cpp  smtlib_term_converter.cpp
